# AOC

./: .gitignore  ReadME.md
.github/workflows/: c-cpp.yml
24/1/: p2.py
24/10/: py2.py
24/17/: py2.py
24/19/: py1.py
24/3/: py1.py  py2.py
24/4/: py1.py
24/6/: py2.py
24/7/: py1.py
24/8/: py1.py  py2.py
Y21/src/: main.rs
Y21/src/d3/: d3p1.rs  d3p2.rs
Y21/src/d7/: d7p1.rs
Y21/src/d9/: d9p1.rs
Y22/: .clang-format  CMakeLists.txt  Cargo.toml  ReadME.md  check.sh  configure.sh  main.cpp
Y22/D1/: sol1.cpp
Y22/src/: main.cpp  main.rs
Y22/src/D1/: sol1.cpp
Y22/src/D11/: sol11.cpp
Y22/src/D2/: sol2.cpp  sol2.h
Y22/src/D3/: sol3.cpp  sol3.h
Y22/src/D4/: sol4.cpp  sol4.h
Y22/src/D5/: sol5.cpp  sol5.h
Y22/src/D6/: sol6.cpp  sol6.h
Y22/src/D7/: sol7.cpp
Y22/src/utils/: utils.cpp  utils.h
Y24/1/: p1.py
Y24/2/: py1.py  py2.py
Y24/24/: py2.py
Y24/4/: py2.py
Y24/5/: py1.py  py2.py
Y24/6/: py1.py
Y24/7/: py2.py
